# ascairn

./: .gitignore  Dockerfile  README.md  ascairn_type_allchr.sh  pyproject.toml  setup.py
.github/workflows/: docker-build.yaml  docker-push.yml  python-publish.yml  python-test.yml
ascairn/: __init__.py  cli.py  logger.py  match.py  match.py.bk  my_seq.py  utils.py
ascairn/commands/: cen_type.py  check_depth.py  kmer_count.py  parse_marker.py  quick_type_all.py  somatic_cna.py  type_all.py
docs/: applications.md  centromere_haplogroups.md  somatic_cna_tutorial.md
examples/: run_somatic_cna.sh
tests/: .gitignore  conftest.py  test_cen_type.py  test_check_depth.py  test_kmer_count.py  test_reference_fasta.py  test_somatic_cna.py
tests/expected/: NA12877.chr1.haplotype.hap_pair.txt  NA12877.chr22.cluster.hap_pair.txt  NA12877.chr22.haplotype.hap_pair.txt  NA12877.chrX.cluster.hap_pair.txt  NA12877.chrX.cluster.marker_prob.txt
tests/expected/ascairn_paper_2025/: NA12877.chr22.cen_type.txt  NA12877.chr22.cluster.hap_pair.txt  NA12877.chr22.haplotype.hap_pair.txt  NA12877.chrX.cen_type.txt  NA12877.chrX.cluster.hap_pair.txt  NA12877.chrX.cluster.marker_prob.txt  NA12877.chrX.haplotype.hap_pair.txt  NA12877.chrX.haplotype.marker_prob.txt  NA12877.depth.txt
tests/expected/ver_2024-12-06/: NA12877.chr1.cluster.hap_pair.txt  NA12877.chr22.cluster.hap_pair.txt  NA12877.chr22.haplotype.hap_pair.txt  NA12877.chr22.result.txt  NA12877.chrX.cluster.hap_pair.txt  NA12877.chrX.cluster.marker_prob.txt  NA12877.chrX.haplotype.hap_pair.txt  NA12877.chrX.haplotype.marker_prob.txt  NA12877.chrX.result.txt
tests/expected/ver_2026-02-04/: NA12877.chrX.cluster.hap_pair.txt  NA12877.chrX.cluster.marker_prob.txt  NA12877.chrX.haplotype.hap_pair.txt  NA12877.chrX.haplotype.marker_prob.txt  NA12877.depth.txt
