[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ascairn"
version = "0.2.1b1"
description = "Analyze centromere variation from short-read data using rare k-mers in alpha satellite sequences"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.9"
authors = [
    { name = "Yuichi Shiraishi", email = "friend1ws@gmail.com" },
]
keywords = ["centromere", "alpha-satellite", "k-mer", "bioinformatics", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "click",
    "scipy",
    "polars",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/friend1ws/ascairn"
Repository = "https://github.com/friend1ws/ascairn"

[project.optional-dependencies]
s3 = ["boto3"]

[project.scripts]
ascairn = "ascairn.cli:main"

[tool.setuptools.packages.find]
include = ["ascairn*"]
